--- a/qlcoder/front-end/css-connect-retangle.html
+++ b/qlcoder/front-end/css-connect-retangle.html
@@ -3,6 +3,10 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <title>css-connect-three</title>
+    <!/*这下面是你要提交的CSS*/>
+    <link rel="stylesheet" type="text/css" href="yche.css" />
+    <!/*这上面是你要提交的CSS*/>
+
     <style>
         body {
             -webkit-animation: bugfix infinite 1s;
@@ -52,11 +56,7 @@
             content: "not_connected";
         }
 
-        /*这下面是你要提交的CSS*/
-        input:checked + input:checked + input:checked +*+*+*+*+*+input:checked+input:not(:checked)+input:checked+*+*+*+*+*+input:checked + input:checked + input:checked ~ p:after {
-            content: "three rectangle";
-        }
-        /*这上面是你要提交的CSS*/
+
     </style>
 
 <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
